Implement 1.0 from draft picture. html & CSS

--- a/index.html
+++ b/index.html
@@ -1,80 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mamma mind</title>
-  <meta name="description" content="Gentle yoga training for expecting/post partum mothers. Calm, safe, and supportive movement during and recovery after pregnancy." />
+  <title>Mamma Mind: Trygg träning för gravida & nyblivna mammor</title>
+  <meta name="description" content="Trygg och anpassad träning för gravida och nyblivna mammor i Göteborg." />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-  <main class="container">
 
-    <section class="hero">
-      <h1>Mamma mind</h1>
-      <p class="tagline">
-        Gentle, mindful movement for expecting mothers
+<header class="hero">
+  <div class="container hero-layout">
+    <div class="hero-text">
+      <h1>Trygg träning för gravida<br>& nyblivna mammor i Göteborg</h1>
+      <p class="lead">
+        Träning, kost & återhämtning – anpassat för just din kropp
       </p>
-    </section>
+      <a href="#kontakt" class="button primary">Se aktuella kurser</a>
+    </div>
 
-    <section class="content">
-      <h2>About the training</h2>
+    <div class="hero-image">
+      <img src="hero.jpg" alt="Gravid kvinna som tränar lugnt på yogamatta">
+    </div>
+  </div>
+</header>
+
+<main>
+
+<section class="audience">
+  <div class="container">
+    <h2>För vem passar detta?</h2>
+
+    <div class="card-grid">
+      <article class="card">
+        <img src="icon-mama.svg" alt="">
+        <p>Nyförlöst mamma som vill träna tryggt</p>
+      </article>
+
+      <article class="card">
+        <img src="icon-body.svg" alt="">
+        <p>Du som känner dig osäker på vad din kropp klarar</p>
+      </article>
+
+      <article class="card">
+        <img src="icon-community.svg" alt="">
+        <p>Du som längtar efter gemenskap med andra mammor</p>
+      </article>
+    </div>
+  </div>
+</section>
+
+<section class="how-it-works">
+  <div class="container split-layout">
+    <div class="image">
+      <img src="instructor.jpg" alt="Instruktör i yogastudio">
+    </div>
+
+    <div class="text">
+      <h2>Så hjälper jag dig</h2>
       <p>
-        Mamma Mind is a calm and supportive yoga practice designed specifically
-        for pregnant women. The focus is on breathing, gentle movement, strength,
-        and relaxation — always adapted to your body and trimester.
+        Jag hjälper gravida och nyblivna mammor att träna, återhämta sig
+        och bygga styrka på ett tryggt och inkännande sätt.
       </p>
 
-      <ul>
-        <li>Safe and pregnancy-adapted exercises</li>
-        <li>Focus on breathing and relaxation</li>
-        <li>No prior yoga experience required</li>
+      <ul class="checklist">
+        <li>Trygg & anpassad träning</li>
+        <li>Återhämtning & närvaro</li>
+        <li>Bebis är varmt välkommen</li>
+        <li>Små personliga grupper</li>
       </ul>
-    </section>
 
-    <section class="content">
-      <h2>Practical information</h2>
+      <a href="#kontakt" class="button primary">Se aktuella kurser</a>
+    </div>
+  </div>
+</section>
 
-      <div class="info-grid">
-        <div>
-          <h3>When</h3>
-          <p>Wednesdays, 18:00–19:00</p>
-        </div>
+<section class="testimonials">
+  <div class="container">
+    <h2>Vad tidigare deltagare säger</h2>
 
-        <div>
-          <h3>Where</h3>
-          <p>Studio XYZ or online via Zoom</p>
-        </div>
+    <div class="card-grid">
+      <article class="quote-card">
+        <p class="title">Börja komma igång</p>
+        <p class="quote">Jag kände mig sedd och trygg från första tillfället.</p>
+      </article>
 
-        <div>
-          <h3>Language</h3>
-          <p>Swedish / English</p>
-        </div>
+      <article class="quote-card">
+        <p class="title">Efter kejsarsnitt</p>
+        <p class="quote">Träningen var precis lagom och gav mig självförtroende.</p>
+      </article>
 
-        <div>
-          <h3>Price</h3>
-          <p>200 SEK per session</p>
-        </div>
-      </div>
-    </section>
+      <article class="quote-card">
+        <p class="title">Missar ett tillfälle?</p>
+        <p class="quote">Flexibiliteten gjorde att jag kunde fortsätta ändå.</p>
+      </article>
+    </div>
+  </div>
+</section>
 
-    <section class="cta">
-      <h2>Interested?</h2>
+<section class="faq-contact" id="kontakt">
+  <div class="container two-col">
+    <div class="faq">
+      <h2>Vanliga frågor</h2>
+
+      <details>
+        <summary>Behöver jag vara i form?</summary>
+        <p>Nej, träningen anpassas efter din nivå och dina förutsättningar.</p>
+      </details>
+
+      <details>
+        <summary>Är detta säkert efter kejsarsnitt?</summary>
+        <p>Ja, med individuella anpassningar och i dialog med dig.</p>
+      </details>
+
+      <details>
+        <summary>Vad händer om jag missar ett tillfälle?</summary>
+        <p>Vi hittar en lösning tillsammans.</p>
+      </details>
+    </div>
+
+    <div class="contact">
+      <h2>Kontakta mig</h2>
       <p>
-        Feel free to get in touch for questions or registration.
+        Hör gärna av dig om du har frågor eller vill boka en plats.
+        Jag ser fram emot att höra från dig.
       </p>
-      <a class="button" href="mailto:hello@yogamama.se">
-        Contact me
+      <a class="button secondary" href="mailto:hej@yogamama.se">
+        Skicka mail
       </a>
-    </section>
+    </div>
+  </div>
+</section>
 
-  </main>
+</main>
 
-  <footer>
-    <p>
-      © 2025 Mamma Mind · Certified prenatal yoga instructor
-    </p>
-  </footer>
+<footer>
+  <p>© 2025 · Yoga Mama · Trygg träning för gravida & nyblivna mammor</p>
+</footer>
+
 </body>
 </html>
