Overall refinment, adding pics. CSS stylying web vs desktop etc

--- a/index.html
+++ b/index.html
@@ -13,130 +13,159 @@
 <header class="hero">
   <div class="container hero-layout">
     <div class="hero-text">
-      <h1>Trygg träning för gravida<br>& nyblivna mammor i Göteborg</h1>
+      <h1>Mamma Mind <br>Trygg träning för gravida & nyblivna mammor i Göteborg</h1>
       <p class="lead">
         Träning, kost & återhämtning – anpassat för just din kropp
       </p>
-      <a href="#kontakt" class="button primary">Se aktuella kurser</a>
+    </div>
+
+    <div class ="hero-button-mobile">
+      <a href="#courses" class="button primary">Se aktuella kurser</a>
     </div>
 
     <div class="hero-image">
-      <img src="hero.jpg" alt="Gravid kvinna som tränar lugnt på yogamatta">
+      <img src="instructor-intro.jpeg" alt="Gravid kvinna som tränar lugnt på yogamatta">
     </div>
   </div>
 </header>
 
 <main>
+  <section class="audience">
+    <div class="container">
+      <h2>För vem passar detta?</h2>
 
-<section class="audience">
-  <div class="container">
-    <h2>För vem passar detta?</h2>
+      <div class="card-grid">
+        <article class="card">
+          <img src="icon-mama.svg" alt="">
+          <p>Nyförlöst mamma som vill träna tryggt</p>
+        </article>
 
-    <div class="card-grid">
-      <article class="card">
-        <img src="icon-mama.svg" alt="">
-        <p>Nyförlöst mamma som vill träna tryggt</p>
-      </article>
+        <article class="card">
+          <img src="icon-body.svg" alt="">
+          <p>Du som känner dig osäker på vad din kropp klarar</p>
+        </article>
 
-      <article class="card">
-        <img src="icon-body.svg" alt="">
-        <p>Du som känner dig osäker på vad din kropp klarar</p>
-      </article>
-
-      <article class="card">
-        <img src="icon-community.svg" alt="">
-        <p>Du som längtar efter gemenskap med andra mammor</p>
-      </article>
+        <article class="card">
+          <img src="icon-community.svg" alt="">
+          <p>Du som längtar efter gemenskap med andra mammor</p>
+        </article>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section class="how-it-works">
-  <div class="container split-layout">
-    <div class="image">
-      <img src="instructor.jpg" alt="Instruktör i yogastudio">
+  <section class="how-it-works">
+    <div class="container split-layout">
+      <div class="image">
+        <img src="instructor.jpg" alt="Instruktör i yogastudio">
+      </div>
+
+      <div class="text">
+        <h2>Så hjälper jag dig</h2>
+        <p>
+          Jag hjälper gravida och nyblivna mammor att träna, återhämta sig
+          och bygga styrka på ett tryggt och inkännande sätt.
+        </p>
+
+        <ul class="checklist">
+          <li>Trygg & anpassad träning</li>
+          <li>Återhämtning & närvaro</li>
+          <li>Bebis är varmt välkommen</li>
+          <li>Små personliga grupper</li>
+        </ul>
+
+        <a href="#courses" class="button primary">Se aktuella kurser</a>
+      </div>
+    </div>
+  </section>
+
+    <section class="about me">
+      <div class="container split-layout">
+        <div class="text">
+          <h2>Om mig</h2>
+          <p>
+            Hej! Jag heter Tara och är certifierad gravid- och mammatränare
+            och utbildad för att hjälpa kvinnor att träna tryggt under
+            och efter graviditet. Jag har själv två barn 3 år och 6 månader gamla
+            och förstår de unika utmaningar som kommer med att vara en nybliven mamma.
+          </p>
+          <p>
+            Min passion är att skapa en trygg och stödjande miljö där du kan
+            känna dig bekväm att utforska din kropp och bygga styrka i din egen takt.
+          </p>
+        </div>
+
+        <div class="image">
+          <img src="instructor-about-me.jpg" alt="Tara, instruktör för Mamma Mind">
+        </div>
+      </div>
+      </section>
+
+  <section class="courses" id="courses">
+    <div class="container">
+      <h2>Aktuella kurser</h2>
+
+      <div class="course-list">
+        <article class="course-card">
+          <h3>Gravidyoga</h3>
+          <p>Varje måndag kl. 18:00–19:00</p>
+          <p>Startdatum: 5 februari 2024</p>
+          <a href="#kontakt" class="button secondary">Boka plats</a>
+        </article>
+
+        <article class="course-card">
+          <h3>Mammaträning</h3>
+          <p>Varje onsdag kl. 10:00–11:00</p>
+          <p>Startdatum: 7 februari 2024</p>
+          <a href="#kontakt" class="button secondary">Boka plats</a>
+        </article>
+
+        <article class="course-card">
+          <h3>Återhämtning för nyblivna mammor</h3>
+          <p>Varje fredag kl. 14:00–15:00</p>
+          <p>Startdatum: 9 februari 2024</p>
+          <a href="#kontakt" class="button secondary">Boka plats</a>
+        </article>
+      </div>
     </div>
 
-    <div class="text">
-      <h2>Så hjälper jag dig</h2>
-      <p>
-        Jag hjälper gravida och nyblivna mammor att träna, återhämta sig
-        och bygga styrka på ett tryggt och inkännande sätt.
-      </p>
+  <section class="faq-contact">
+    <div class="container two-col">
+      <div class="faq">
+        <h2>Vanliga frågor</h2>
 
-      <ul class="checklist">
-        <li>Trygg & anpassad träning</li>
-        <li>Återhämtning & närvaro</li>
-        <li>Bebis är varmt välkommen</li>
-        <li>Små personliga grupper</li>
-      </ul>
+        <details>
+          <summary>Behöver jag vara i form?</summary>
+          <p>Nej, träningen anpassas efter din nivå och dina förutsättningar.</p>
+        </details>
 
-      <a href="#kontakt" class="button primary">Se aktuella kurser</a>
+        <details>
+          <summary>Är detta säkert efter kejsarsnitt?</summary>
+          <p>Ja, med individuella anpassningar och i dialog med dig.</p>
+        </details>
+
+        <details>
+          <summary>Vad händer om jag missar ett tillfälle?</summary>
+          <p>Vi hittar en lösning tillsammans.</p>
+        </details>
+      </div>
+
+      <div class="contact">
+        <h2>Kontakta mig</h2>
+        <p>
+          Hör gärna av dig om du har frågor eller vill boka en plats.
+          Jag ser fram emot att höra från dig.
+        </p>
+        <a class="button secondary" href="mailto:hej@yogamama.se">
+          Skicka mail
+        </a>
+      </div>
     </div>
-  </div>
-</section>
-
-<section class="testimonials">
-  <div class="container">
-    <h2>Vad tidigare deltagare säger</h2>
-
-    <div class="card-grid">
-      <article class="quote-card">
-        <p class="title">Börja komma igång</p>
-        <p class="quote">Jag kände mig sedd och trygg från första tillfället.</p>
-      </article>
-
-      <article class="quote-card">
-        <p class="title">Efter kejsarsnitt</p>
-        <p class="quote">Träningen var precis lagom och gav mig självförtroende.</p>
-      </article>
-
-      <article class="quote-card">
-        <p class="title">Missar ett tillfälle?</p>
-        <p class="quote">Flexibiliteten gjorde att jag kunde fortsätta ändå.</p>
-      </article>
-    </div>
-  </div>
-</section>
-
-<section class="faq-contact" id="kontakt">
-  <div class="container two-col">
-    <div class="faq">
-      <h2>Vanliga frågor</h2>
-
-      <details>
-        <summary>Behöver jag vara i form?</summary>
-        <p>Nej, träningen anpassas efter din nivå och dina förutsättningar.</p>
-      </details>
-
-      <details>
-        <summary>Är detta säkert efter kejsarsnitt?</summary>
-        <p>Ja, med individuella anpassningar och i dialog med dig.</p>
-      </details>
-
-      <details>
-        <summary>Vad händer om jag missar ett tillfälle?</summary>
-        <p>Vi hittar en lösning tillsammans.</p>
-      </details>
-    </div>
-
-    <div class="contact">
-      <h2>Kontakta mig</h2>
-      <p>
-        Hör gärna av dig om du har frågor eller vill boka en plats.
-        Jag ser fram emot att höra från dig.
-      </p>
-      <a class="button secondary" href="mailto:hej@yogamama.se">
-        Skicka mail
-      </a>
-    </div>
-  </div>
 </section>
 
 </main>
 
 <footer>
-  <p>© 2025 · Yoga Mama · Trygg träning för gravida & nyblivna mammor</p>
+  <p>© 2025 · Mamma Mind · Trygg träning för gravida & nyblivna mammor</p>
 </footer>
 
 </body>
