add logo, remove unused resources, card styling

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 
 <header class="hero">
   <div class="container hero-layout">
+    <!-- Logo -->
+    <div class="hero-logo">
+      <img src="logo.svg" alt="Mamma Mind logo" class="logo">
+    </div>
+
+
     <div class="hero-text">
-      <h1>Mamma Mind <br>Trygg träning för gravida & nyblivna mammor i Göteborg</h1>
+      <h1>Trygg träning för gravida & nyblivna mammor i Göteborg</h1>
       <p class="lead">
         Träning, kost & återhämtning – anpassat för just din kropp
       </p>
@@ -23,9 +29,6 @@
       <a href="#courses" class="button primary">Se aktuella kurser</a>
     </div>
 
-    <div class="hero-image">
-      <img src="instructor-intro.jpeg" alt="Gravid kvinna som tränar lugnt på yogamatta">
-    </div>
   </div>
 </header>
 
@@ -36,17 +39,14 @@
 
       <div class="card-grid">
         <article class="card">
-          <img src="icon-mama.svg" alt="">
           <p>Nyförlöst mamma som vill träna tryggt</p>
         </article>
 
         <article class="card">
-          <img src="icon-body.svg" alt="">
           <p>Du som känner dig osäker på vad din kropp klarar</p>
         </article>
 
         <article class="card">
-          <img src="icon-community.svg" alt="">
           <p>Du som längtar efter gemenskap med andra mammor</p>
         </article>
       </div>
@@ -55,10 +55,6 @@
 
   <section class="how-it-works">
     <div class="container split-layout">
-      <div class="image">
-        <img src="instructor.jpg" alt="Instruktör i yogastudio">
-      </div>
-
       <div class="text">
         <h2>Så hjälper jag dig</h2>
         <p>
