Updated 2 part logo, background image in header, splitters between sections

--- a/index.html
+++ b/index.html
@@ -12,11 +12,26 @@
 
 <header class="hero">
   <div class="container hero-layout">
-    <!-- Logo -->
-    <div class="hero-logo">
-      <img src="logo.svg" alt="Mamma Mind logo" class="logo">
-    </div>
 
+    <!-- Combined logo -->
+    <div class="logo-layout">
+      <div class="hero-logo-text">
+        <img
+                src="mamma_mind_logo_text.svg"
+                alt="Mamma Mind"
+                class="logo logo-text"
+        >
+      </div>
+      <div class="hero-logo-symbol">
+        <img
+                src="mamma_mind_logo.svg"
+                alt=""
+                class="logo logo-symbol"
+                aria-hidden="true"
+        >
+      </div>
+
+    </div>
 
     <div class="hero-text">
       <h1>Trygg träning för gravida & nyblivna mammor i Göteborg</h1>
@@ -25,12 +40,13 @@
       </p>
     </div>
 
-    <div class ="hero-button-mobile">
+    <div class="hero-button-mobile">
       <a href="#courses" class="button primary">Se aktuella kurser</a>
     </div>
 
   </div>
 </header>
+
 
 <main>
   <section class="audience">
@@ -39,7 +55,7 @@
 
       <div class="card-grid">
         <article class="card">
-          <p>Nyförlöst mamma som vill träna tryggt</p>
+          <p>Gravid/Nyförlöst mamma som vill träna tryggt</p>
         </article>
 
         <article class="card">
@@ -52,6 +68,11 @@
       </div>
     </div>
   </section>
+
+  <div class="container">
+    <hr>
+  </div>
+
 
   <section class="how-it-works">
     <div class="container split-layout">
@@ -96,30 +117,21 @@
       </div>
       </section>
 
+  <div class="container">
+    <hr>
+  </div>
+
+
   <section class="courses" id="courses">
     <div class="container">
       <h2>Aktuella kurser</h2>
 
       <div class="course-list">
         <article class="course-card">
-          <h3>Gravidyoga</h3>
-          <p>Varje måndag kl. 18:00–19:00</p>
-          <p>Startdatum: 5 februari 2024</p>
-          <a href="#kontakt" class="button secondary">Boka plats</a>
-        </article>
-
-        <article class="course-card">
-          <h3>Mammaträning</h3>
-          <p>Varje onsdag kl. 10:00–11:00</p>
-          <p>Startdatum: 7 februari 2024</p>
-          <a href="#kontakt" class="button secondary">Boka plats</a>
-        </article>
-
-        <article class="course-card">
-          <h3>Återhämtning för nyblivna mammor</h3>
-          <p>Varje fredag kl. 14:00–15:00</p>
-          <p>Startdatum: 9 februari 2024</p>
-          <a href="#kontakt" class="button secondary">Boka plats</a>
+          <h3>Trygg återstart för mammor</h3>
+          <p>Varje Söndag kl. 15:00–16:00</p>
+          <p>Startdatum: 5 mars 2026</p>
+          <a href="#kontakt" class="button secondary">Mer info</a>
         </article>
       </div>
     </div>
