Second courses page, assets folder

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <div class="logo-layout">
       <div class="hero-logo-text">
         <img
-                src="mamma_mind_logo_text.svg"
+                src="assets/svg/mamma_mind_logo_text.svg"
                 alt="Mamma Mind"
                 class="logo logo-text"
         >
       </div>
       <div class="hero-logo-symbol">
         <img
-                src="mamma_mind_logo.svg"
+                src="assets/svg/mamma_mind_logo.svg"
                 alt=""
                 class="logo logo-symbol"
                 aria-hidden="true"
@@ -112,7 +112,7 @@
         </div>
 
         <div class="image">
-          <img src="instructor-about-me.jpg" alt="Tara, instruktör för Mamma Mind">
+          <img src="assets/images/instructor-about-me.jpg" alt="Tara, instruktör för Mamma Mind">
         </div>
       </div>
       </section>
@@ -131,7 +131,7 @@
           <h3>Trygg återstart för mammor</h3>
           <p>Varje Söndag kl. 15:00–16:00</p>
           <p>Startdatum: 5 mars 2026</p>
-          <a href="#kontakt" class="button secondary">Mer info</a>
+          <a href="courses/trygg-aterstart-for-mammor.html" class="button secondary">Mer info</a>
         </article>
       </div>
     </div>
