Courses info updated

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -13,7 +13,7 @@
 <header class="site-header">
     <div class="container">
         <a href="../index.html" class="logo-link">
-            <img src="../mamma_mind_logo_text.svg" alt="Mamma Mind" class="logo">
+            <img src="../assets/svg/mamma_mind_logo_text.svg" alt="Mamma Mind" class="logo">
         </a>
     </div>
 </header>
@@ -22,17 +22,29 @@
     <section class="course-detail">
         <div class="container narrow">
 
-            <h1>Trygg återstart för mammor</h1>
+            <h1>🌿 Trygg återstart efter graviditet</h1>
 
             <p class="lead">
-                En lugn och trygg återstart för dig som nyligen fött barn.
+                Den här kursen är för dig som vill komma igång med träning på ett tryggt, inkännande och hållbart sätt efter graviditet och förlossning.
+                Under åtta veckor får du möjlighet att steg för steg återknyta kontakten med din kropp, bygga upp styrka och skapa en stabil grund för fortsatt träning – utan press eller prestation.
+                Träningen är anpassad efter mammakroppen och har fokus på:
+            <ul class=course-description-meta">
+                <li>bäckenbotten och core</li>
+                <li>hållning och kroppskännedom</li>
+                <li>skonsam styrka</li>
+                <li>yoga, andning och meditation</li>
+                <li>återhämtning och närvaro</li>
+            </ul>
+                Bebisar är varmt välkomna, och träningen sker i små grupper för att skapa trygghet, gemenskap och utrymme att möta varje deltagare där hon är.
             </p>
 
             <ul class="course-meta">
-                <li><strong>Dag:</strong> Söndag</li>
-                <li><strong>Tid:</strong> 15:00–16:00</li>
-                <li><strong>Start:</strong> 5 mars 2026</li>
-                <li><strong>Plats:</strong> Göteborg</li>
+                <li><strong>Start:</strong> 5 mars</li>
+                <li><strong>Längd:</strong> 8 veckor</li>
+                <li><strong>Dag & Tid:</strong> Torsdagar kl. 10.00-11.00</li>
+                <li><strong>Plats:</strong> Eriksberg</li>
+                <li><strong>Bebisar:</strong> Varmt välkomna👶</li>
+                <li><strong>Förkunskapskrav:</strong> Efterkontroll genomförd</li>
             </ul>
 
             <p>
@@ -40,8 +52,20 @@
                 egen takt. Bebisar är varmt välkomna.
             </p>
 
-            <a href="mailto:hej@yogamama.se" class="button primary">
-                Boka plats
+            <p>
+                💛 Early Bird-erbjudande (t.o.m. 10 februari)
+                Som en extra omtanke till dig som bokar tidigt ingår:
+                <ul class="early-bird-meta">
+                    <li>500 kr rabatt</li>
+                    <li>Goodiebag med produkter till ett värde av ca 700 kr</li>
+                </ul>
+
+                Early bird-pris: 1 795 kr.  Ordinarie pris: 2 295 kr
+                Platserna är begränsade för att kunna ge varje mamma en trygg och personlig upplevelse.
+            </p>
+
+            <a href="mailto:info@yogamama.se" class="button primary">
+                Anmäl intresse
             </a>
 
         </div>
