--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
       <div class="course-list">
         <article class="course-card">
-          <h3>Trygg återstart för mammor</h3>
+          <h3>🌿 Trygg återstart efter graviditet</h3>
           <p>Varje Söndag kl. 15:00–16:00</p>
           <p>Startdatum: 5 mars 2026</p>
           <a href="courses/trygg-aterstart-for-mammor.html" class="button secondary">Mer info</a>
