Add Form to courses page, stylesheet path corrected, <hr> styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mamma Mind: Trygg träning för gravida & nyblivna mammor</title>
   <meta name="description" content="Trygg och anpassad träning för gravida och nyblivna mammor i Göteborg." />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
@@ -121,7 +121,6 @@
     <hr>
   </div>
 
-
   <section class="courses" id="courses">
     <div class="container">
       <h2>Aktuella kurser</h2>
@@ -135,6 +134,7 @@
         </article>
       </div>
     </div>
+    </section>
 
   <section class="faq-contact">
     <div class="container two-col">
