--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -63,12 +63,47 @@
                 Early bird-pris: 1 795 kr.  Ordinarie pris: 2 295 kr
                 Platserna är begränsade för att kunna ge varje mamma en trygg och personlig upplevelse.
             </p>
-
-            <a href="mailto:info@yogamama.se" class="button primary">
-                Anmäl intresse
-            </a>
-
         </div>
+    </section>
+
+    <section class="interest-form">
+        <h2>Anmäl intresse</h2>
+
+        <form action="#" method="post" class="form">
+
+            <div class="form-field">
+                <label for="name">Namn</label>
+                <input
+                        type="text"
+                        id="name"
+                        name="name"
+                        required
+                >
+            </div>
+
+            <div class="form-field">
+                <label for="email">E-post</label>
+                <input
+                        type="email"
+                        id="email"
+                        name="email"
+                        required
+                >
+            </div>
+
+            <div class="form-field">
+                <label for="message">Meddelande (valfritt)</label>
+                <textarea
+                        id="message"
+                        name="message"
+                        rows="4"
+                ></textarea>
+            </div>
+
+            <button type="submit" class="button primary">
+                Skicka intresseanmälan
+            </button>
+        </form>
     </section>
 </main>
 
