Remove logo text accent dot, add /styles folder

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Trygg återstart för mammor | Mamma Mind</title>
     <meta name="description" content="Trygg och inkännande återstart för nyblivna mammor i Göteborg.">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../styles/general.css">
 </head>
 
 <body>
