--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mamma Mind: Trygg träning för gravida & nyblivna mammor</title>
   <meta name="description" content="Trygg och anpassad träning för gravida och nyblivna mammor i Göteborg." />
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/styles/general.css" />
+  <!-- TODO refactor general.css into general and specific stylesheets -->
 </head>
 
 <body>
