Split up css into sub files, fix MammaMind logo accent dot & spacing in MammaMind

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <title>Mamma Mind: Trygg träning för gravida & nyblivna mammor</title>
   <meta name="description" content="Trygg och anpassad träning för gravida och nyblivna mammor i Göteborg." />
   <link rel="stylesheet" href="/styles/general.css" />
-  <!-- TODO refactor general.css into general and specific stylesheets -->
+  <link rel="stylesheet" href="/styles/buttons.css" />
+  <link rel="stylesheet" href="/styles/forms.css" />
+  <link rel="stylesheet" href="/styles/hero.css" />
+  <link rel="stylesheet" href="/styles/logo.css" />
 </head>
 
 <body>
@@ -174,7 +177,7 @@
 </main>
 
 <footer>
-  <p>© 2025 · Mamma Mind · Trygg träning för gravida & nyblivna mammor</p>
+  <p>© 2025 · MammaMind · Trygg träning för gravida & nyblivna mammor</p>
 </footer>
 
 </body>
