Include buttons & forms css in trygg-aterstart-for-mammor.html

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -6,6 +6,8 @@
     <title>Trygg återstart för mammor | Mamma Mind</title>
     <meta name="description" content="Trygg och inkännande återstart för nyblivna mammor i Göteborg.">
     <link rel="stylesheet" href="../styles/general.css">
+    <link rel="stylesheet" href="../styles/buttons.css">
+    <link rel="stylesheet" href="../styles/forms.css">
 </head>
 
 <body>
