Combined logo & text into one svg

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -12,10 +12,14 @@
 
 <body>
 
-<header class="site-header">
-    <div class="container">
+<header class="hero">
+    <div class="container sub-hero-layout">
         <a href="../index.html" class="logo-link">
-            <img src="../assets/svg/mamma_mind_logo_text.svg" alt="Mamma Mind" class="logo">
+            <div class="hero-logo">
+                <img src="../assets/svg/mamma_mind_logo_combined.svg"
+                     alt="Mamma Mind"
+                     class="logo">
+            </div>
         </a>
     </div>
 </header>
