--- a/index.html
+++ b/index.html
@@ -16,26 +16,11 @@
 
 <header class="hero">
   <div class="container hero-layout">
-
-    <!-- Combined logo -->
-    <div class="logo-layout">
-      <div class="hero-logo-text">
-        <img
-                src="assets/svg/mamma_mind_logo_text.svg"
-                alt="Mamma Mind"
-                class="logo logo-text"
-        >
+      <div class="hero-logo">
+        <img src="assets/svg/mamma_mind_logo_combined.svg"
+             alt="Mamma Mind"
+             class="logo">
       </div>
-      <div class="hero-logo-symbol">
-        <img
-                src="assets/svg/mamma_mind_logo_2.svg"
-                alt=""
-                class="logo logo-symbol"
-                aria-hidden="true"
-        >
-      </div>
-
-    </div>
 
     <div class="hero-text">
       <h1>Trygg träning för gravida & nyblivna mammor i Göteborg</h1>
