Formspree integration, Thanks page,  some fixes in index.html

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -6,7 +6,7 @@
     <title>Trygg återstart för mammor | Mamma Mind</title>
     <meta name="description" content="Trygg och inkännande återstart för nyblivna mammor i Göteborg.">
     <link rel="stylesheet" href="/styles/general.css">
-    <link rel="stylesheet" href="/styles/hero.css" />
+    <link rel="stylesheet" href="/styles/hero.css"/>
     <link rel="stylesheet" href="/styles/buttons.css">
     <link rel="stylesheet" href="/styles/forms.css">
     <link rel="stylesheet" href="/styles/logo.css">
@@ -33,8 +33,11 @@
             <h1>🌿 Trygg återstart efter graviditet</h1>
 
             <p class="lead">
-                Den här kursen är för dig som vill komma igång med träning på ett tryggt, inkännande och hållbart sätt efter graviditet och förlossning.
-                Under åtta veckor får du möjlighet att steg för steg återknyta kontakten med din kropp, bygga upp styrka och skapa en stabil grund för fortsatt träning – utan press eller prestation.
+                Den här kursen är för dig som vill komma igång med träning på ett tryggt, inkännande
+                och hållbart sätt efter graviditet och förlossning.
+                Under åtta veckor får du möjlighet att steg för steg återknyta kontakten med din
+                kropp, bygga upp styrka och skapa en stabil grund för fortsatt träning – utan press
+                eller prestation.
                 Träningen är anpassad efter mammakroppen och har fokus på:
             <ul class=course-description-meta">
                 <li>bäckenbotten och core</li>
@@ -43,7 +46,8 @@
                 <li>yoga, andning och meditation</li>
                 <li>återhämtning och närvaro</li>
             </ul>
-                Bebisar är varmt välkomna, och träningen sker i små grupper för att skapa trygghet, gemenskap och utrymme att möta varje deltagare där hon är.
+            Bebisar är varmt välkomna, och träningen sker i små grupper för att skapa trygghet,
+            gemenskap och utrymme att möta varje deltagare där hon är.
             </p>
 
             <ul class="course-meta">
@@ -57,62 +61,68 @@
 
             <p>
                 Fokus ligger på återhämtning, närvaro och att bygga styrka i din
-                egen takt. Bebisar är varmt välkomna.
+                egen takt. Efter passet finns möjlighet att stanna kvar
+                för fika och umgänge om du vill.
             </p>
 
             <p>
                 💛 Early Bird-erbjudande (t.o.m. 10 februari)
                 Som en extra omtanke till dig som bokar tidigt ingår:
-                <ul class="early-bird-meta">
-                    <li>500 kr rabatt</li>
-                    <li>Goodiebag med produkter till ett värde av ca 700 kr</li>
-                </ul>
+            <ul class="early-bird-meta">
+                <li>500 kr rabatt</li>
+                <li>Goodiebag med produkter till ett värde av ca 700 kr</li>
+            </ul>
 
-                Early bird-pris: 1 795 kr.  Ordinarie pris: 2 295 kr
-                Platserna är begränsade för att kunna ge varje mamma en trygg och personlig upplevelse.
+            Early bird-pris: 1 795 kr. Ordinarie pris: 2 295 kr
+            Platserna är begränsade för att kunna ge varje mamma en trygg och personlig upplevelse.
             </p>
         </div>
     </section>
 
-    <section class="interest-form">
-        <h2>Anmäl intresse</h2>
+    <div class="container narrow">
 
-        <form action="#" method="post" class="form">
+        <section class="interest-form">
+            <h2>Anmäl intresse</h2>
 
-            <div class="form-field">
-                <label for="name">Namn</label>
-                <input
-                        type="text"
-                        id="name"
-                        name="name"
-                        required
-                >
-            </div>
+            <form action="https://formspree.io/f/meeejgpw"
+                  method="POST"
+                  class="form">
 
-            <div class="form-field">
-                <label for="email">E-post</label>
-                <input
-                        type="email"
-                        id="email"
-                        name="email"
-                        required
-                >
-            </div>
+                <div class="form-field">
+                    <label for="name">Namn</label>
+                    <input
+                            type="text"
+                            id="name"
+                            name="name"
+                            required
+                    >
+                </div>
 
-            <div class="form-field">
-                <label for="message">Meddelande (valfritt)</label>
-                <textarea
-                        id="message"
-                        name="message"
-                        rows="4"
-                ></textarea>
-            </div>
+                <div class="form-field">
+                    <label for="email">E-post</label>
+                    <input
+                            type="email"
+                            id="email"
+                            name="email"
+                            required
+                    >
+                </div>
 
-            <button type="submit" class="button primary">
-                Skicka intresseanmälan
-            </button>
-        </form>
-    </section>
+                <div class="form-field">
+                    <label for="message">Meddelande (valfritt)</label>
+                    <textarea
+                            id="message"
+                            name="message"
+                            rows="4"
+                    ></textarea>
+                </div>
+
+                <button type="submit" class="button primary">
+                    Skicka intresseanmälan
+                </button>
+            </form>
+        </section>
+    </div>
 </main>
 
 <footer>
