--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header class="hero">
   <div class="container hero-layout">
       <div class="hero-logo">
-        <img src="assets/svg/mamma_mind_logo_combined.svg"
+        <img src="/assets/svg/mamma_mind_logo_combined.svg"
              alt="Mamma Mind"
              class="logo">
       </div>
@@ -25,7 +25,7 @@
     <div class="hero-text">
       <h1>Trygg träning för gravida & nyblivna mammor i Göteborg</h1>
       <p class="lead">
-        Träning, kost & återhämtning – anpassat för just din kropp
+        Träning, återhämtning och gemenskap – anpassat för just dig
       </p>
     </div>
 
@@ -40,21 +40,29 @@
 <main>
   <section class="audience">
     <div class="container">
-      <h2>För vem passar detta?</h2>
+      <h2>Varför MammaMind?</h2>
+      <p>
+        MammaMind finns för dig som är gravid eller nybliven mamma och vill röra på dig med trygghet, inte krav.
+        För dig som känner dig osäker på vad din kropp klarar av – och längtar efter att lyssna inåt igen.
+        Här möts anpassad träning, återhämtning och medveten närvaro i en mjuk helhet.
+        Allt utgår från var du befinner dig, med fokus på styrka, andning, stabilitet och läkning.
+      </p>
 
-      <div class="card-grid">
-        <article class="card">
-          <p>Gravid/Nyförlöst mamma som vill träna tryggt</p>
-        </article>
+      <p>
+        Återhämtning är en självklar del, inte något som ska hinnas med senare.
+        Och kanske viktigast av allt – här finns gemenskap.
+        En plats där du inte behöver bära allt själv, och där det är okej att vara precis där du är.
+      </p>
 
-        <article class="card">
-          <p>Du som känner dig osäker på vad din kropp klarar</p>
-        </article>
-
-        <article class="card">
-          <p>Du som längtar efter gemenskap med andra mammor</p>
-        </article>
+      <div class="contact">
+        <p>
+          👉Låter det intressant? Tveka inte på att kontakta mig för mer info!
+        </p>
+        <a class="button secondary" href="mailto:info@mammamind.se">
+          Skicka mail
+        </a>
       </div>
+
     </div>
   </section>
 
@@ -77,6 +85,7 @@
           <li>Återhämtning & närvaro</li>
           <li>Bebis är varmt välkommen</li>
           <li>Små personliga grupper</li>
+          <li>?Enskilt upplägg?</li>
         </ul>
 
         <a href="#courses" class="button primary">Se aktuella kurser</a>
@@ -152,7 +161,7 @@
           Hör gärna av dig om du har frågor eller vill boka en plats.
           Jag ser fram emot att höra från dig.
         </p>
-        <a class="button secondary" href="mailto:hej@yogamama.se">
+        <a class="button secondary" href="mailto:info@mammamind.se">
           Skicka mail
         </a>
       </div>
@@ -162,7 +171,7 @@
 </main>
 
 <footer>
-  <p>© 2025 · MammaMind · Trygg träning för gravida & nyblivna mammor</p>
+  <p>© 2026 · MammaMind · Trygg träning för gravida & nyblivna mammor</p>
 </footer>
 
 </body>
